force-app/main/default/objects/Product__c/fields/Type_Promogaming__c.field-meta.xml
<CustomField>
    <fullName>Type_Promogaming__c</fullName>
    <label>Type Promogaming</label>
    <length>255</length>
    <type>Text</type>
</CustomField>