force-app/main/default/objects/Product__c/fields/TypePromogaming__c.field-meta.xml
<CustomField>
    <fullName>TypePromogaming__c</fullName>
    <label>Type Promogaming</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always on</fullName>
            </value>
            <value>
                <fullName>Temps fort industriel</fullName>
            </value>
            <value>
                <fullName>Temps fort multimarque</fullName>
            </value>
            <value>
                <fullName>Pimp your promo</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Ultra personnalisé</fullName>
            </value>
            <value>
                <fullName>Premier panier</fullName>
            </value>
            <value>
                <fullName>Impulse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>