force-app/main/default/objects/Product__c/fields/Univers2__c.field-meta.xml
<CustomField>
    <fullName>Univers2__c</fullName>
    <label>Univers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alimentation alternative</fullName>
            </value>
            <value>
                <fullName>Animaux</fullName>
            </value>
            <value>
                <fullName>Bébé</fullName>
            </value>
            <value>
                <fullName>Bio</fullName>
            </value>
            <value>
                <fullName>Boissons</fullName>
            </value>
            <value>
                <fullName>Charcuterie et Traiteur</fullName>
            </value>
            <value>
                <fullName>Culture et Papeterie</fullName>
            </value>
            <value>
                <fullName>Électroménager</fullName>
            </value>
            <value>
                <fullName>Entretien et Nettoyage</fullName>
            </value>
            <value>
                <fullName>Épicerie salée</fullName>
            </value>
            <value>
                <fullName>Épicerie sucrée</fullName>
            </value>
            <value>
                <fullName>Fruits et Légumes</fullName>
            </value>
            <value>
                <fullName>High Tech</fullName>
            </value>
            <value>
                <fullName>Hygiène et Beauté</fullName>
            </value>
            <value>
                <fullName>Jardin, Bricolage et Auto</fullName>
            </value>
            <value>
                <fullName>Jeux, Sports et Loisirs</fullName>
            </value>
            <value>
                <fullName>Maison</fullName>
            </value>
            <value>
                <fullName>Mode et Bagagerie</fullName>
            </value>
            <value>
                <fullName>Nos offres partenaires</fullName>
            </value>
            <value>
                <fullName>Pains et Pâtisseries</fullName>
            </value>
            <value>
                <fullName>Produits laitiers et Œufs</fullName>
            </value>
            <value>
                <fullName>Soldes</fullName>
            </value>
            <value>
                <fullName>Surgelés</fullName>
            </value>
            <value>
                <fullName>Viandes et Poissons</fullName>
            </value>
            <value>
                <fullName>Vrac</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>