force-app/main/default/objects/Product__c/recordTypes/Autres.recordType-meta.xml
<RecordType>
    <fullName>Autres</fullName>
    <active>true</active>
    <label>Autres</label>
</RecordType>