force-app/main/default/objects/Product__c/recordTypes/Extension_Audience.recordType-meta.xml
<RecordType>
    <fullName>Extension_Audience</fullName>
    <active>true</active>
    <label>Extension d&apos;audience</label>
</RecordType>