force-app/main/default/objects/Product__c/recordTypes/Promogaming.recordType-meta.xml
<RecordType>
    <fullName>Promogaming</fullName>
    <active>true</active>
    <label>Promogaming</label>
</RecordType>