force-app/main/default/objects/Product__c/recordTypes/Retail_Media_OnSite.recordType-meta.xml
<RecordType>
    <fullName>Retail_Media_OnSite</fullName>
    <active>true</active>
    <label>Retail Media OnSite</label>
</RecordType>