force-app/main/default/objects/Product__c/recordTypes/Search.recordType-meta.xml
<RecordType>
    <fullName>Search</fullName>
    <active>true</active>
    <label>Search</label>
</RecordType>