force-app/main/default/objects/Product__c/validationRules/Format_obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>Format_obligatoire</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  Package__r.Name = &quot;Retail Media Onsite&quot;,
ISBLANK( Format__c ))</errorConditionFormula>
    <errorMessage>Merci de sélectionner un format</errorMessage>
</ValidationRule>