force-app/main/default/objects/Product__c/validationRules/Support_Obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>Support_Obligatoire</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
Package__r.Name = &quot;Retail Media Onsite&quot;,
ISBLANK(  Medium__c  ))</errorConditionFormula>
    <errorMessage>Merci de sélectionner une enseigne</errorMessage>
</ValidationRule>